<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">TeleCam</string>
    <string name="peer_status">Peer Status</string>
    <string name="controller_tab">Control</string>

    <string name="gallery_Tab">Gallery</string>
    <string name="action_settings">Settings</string>
    <string name="bluetooth_settings">Bluetooth Settings</string>

    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Bye</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>


    <!-- Options Menu -->
    <string name="discoverable">Make discoverable</string>
    <string name="bluetoothNotAvailableOrNotSupported">"Bluetooth is not enabled or supported on this device"</string>
    <string name="bluetoothNotAvailable">Bluetooth is not available.</string>
    <string name="bluetoothNotEnabled">Please enable bluetooth on settings.</string>
    <string name="cameraNotAvailable">Main camera is not available</string>
    <string name="control">Control</string>
    <string name="camera">Camera</string>
    <string name="camOrRemoteDialogTitle">Device Mode Selector</string>
    <string name="camOrRemoteDialogMessage">Please select device behavior</string>
    <string name="imagePreviewDescription">Image Preview</string>
    <string name="peerSelectLabel">Camera:</string>
    <string name="sendingPhoto">Sending photo</string>
    <string name="takingPicture">Taking Photo</string>
    <string name="errorInTransmission">Photo was sent, but didn\'t go through correctly</string>
    <string name="errorInReception">Photo was received, but didn\'t come through correctly"</string>
    <string name="photoSentSuccessfully">Photo was sent successfully</string>
    <string name="couldNotConnectToPeer">Could not connect to the paired device</string>
    <string name="invalidHeader">Photo was sent, but the header was formatted incorrectly</string>
    <string name="ReceivingPhoto">Receiving photo…</string>
    <string name="imageSave">The photo has been saved.</string>
    <string name="takePhotoRequestSentSuccessfully">Take Photo Request Sent</string>
    <string name="clear_cache_menu">Clear Cache</string>
    <string name="cachedCleared">The cache has been cleared</string>


    <!-- Preferences -->
    <string name="preferences">Preferences</string>
    <string name="controller_title">Controller</string>
    <string name="photo_timer_summary">Specifies the amount of time for the timer.</string>
    <string name="photo_timer_title">Photo Timer</string>
    <string name="settings">Settings</string>
    <string name="share_action_label">Share</string>
    <string name="share_subject">Sharing a photo using Telecam</string>
    <string name="share_extra">Get it from PlayStore</string>
    <string name="delete_action_label">Delete</string>
    <string name="delete_action_dialog_title">Delete Current Photo</string>
    <string name="delete_action_dialog_message">Do you want to delete this photo?</string>
    <string name="edit_action_label">Edit Photo</string>
    <string name="delete_original_dialog_title">Delete Original</string>
    <string name="delete_original_dialog_message">Do you want do delete the original photo</string>
    <string name="save_photo">Save</string>
    <string name="bluetooth_is_required_title">Bluetooth is required</string>
    <string name="bluetooth_is_required_message">Do you want to enable bluetooth in settings menu?.</string>
    <string name="make_visible">Visible</string>
    <string name="new_device">New Device</string>
    <string name="please_wait">Loading. Please wait…</string>
    <string name="no_devices_available_message">TIP! Try to click discoverable button in the other device.</string>
    <string name="device_name">Your device name:&#160;</string>
    <string name="no_devices_available_title">No devices found :(</string>
    <string name="device_is_discoverable_title">Device Bluetooth Visibility</string>
    <string name="device_is_discoverable_message">Your device is visible already.</string>
    <string name="flash_off">Off</string>
    <string name="flash_auto">auto</string>
    <string name="flash_on">On</string>
    <string name="flash_label">Flash</string>
    <string name="savePhotoRequestSentSuccessfully">Save Photo Request Sent</string>


</resources>
