<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/controllerTab"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_width="fill_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/peerSelectLabel"
            android:paddingTop="15dp"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:id="@+id/deviceSpinner" android:layout_gravity="right"
            android:spinnerMode="dialog"
            android:paddingTop="3dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_width="fill_parent"
        android:orientation="horizontal">
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/save_photo"
            android:id="@+id/savePhoto"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

        <RelativeLayout
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:layout_width="fill_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/pic_preview"
                android:background="@android:color/transparent"
                android:padding="1dp"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/imagePreviewDescription" />
            <TextView
                android:textSize="70sp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_light"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/timerLabel"
                android:gravity="center"/>
            <Button
                android:id="@+id/rotateLeft"
                android:drawableLeft="@drawable/arrow_left_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@android:color/transparent"
            />
            <Button
                android:id="@+id/rotateRight"
                android:drawableRight="@drawable/arrow_left_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:layout_marginBottom="20dp"
             />
        </RelativeLayout>



        <RelativeLayout
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:layout_width="fill_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/shutterButton"
                android:background="@drawable/oval"
                android:drawableStart="@drawable/camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:layout_gravity="center"
                />
        </RelativeLayout>
</LinearLayout>
